exports[`no-import-test-files > invalid(1): import './test.js'; 1`] = `

  1 | import './test.js';

`;

exports[`no-import-test-files > invalid(1): import './test.js'; 2`] = `

Message:
> 1 | import './test.js';
    | ^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(10): import './example.%74est.js'; 1`] = `

  1 | import './example.%74est.js';

`;

exports[`no-import-test-files > invalid(10): import './example.%74est.js'; 2`] = `

Message:
> 1 | import './example.%74est.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(11): import './node_modules/%2e%2e/test/helpers.js'; 1`] = `

  1 | import './node_modules/%2e%2e/test/helpers.js';

`;

exports[`no-import-test-files > invalid(11): import './node_modules/%2e%2e/test/helpers.js'; 2`] = `

Message:
> 1 | import './node_modules/%2e%2e/test/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(12): import './test/helpers.js?direct#source'; 1`] = `

  1 | import './test/helpers.js?direct#source';

`;

exports[`no-import-test-files > invalid(12): import './test/helpers.js?direct#source'; 2`] = `

Message:
> 1 | import './test/helpers.js?direct#source';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(13): import './helper.js'; 1`] = `

Filename: test/parent.test.js

  1 | import './helper.js';

`;

exports[`no-import-test-files > invalid(13): import './helper.js'; 2`] = `

Message:
> 1 | import './helper.js';
    | ^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(14): import '../helper.js'; 1`] = `

Filename: test/nested/parent.test.js

  1 | import '../helper.js';

`;

exports[`no-import-test-files > invalid(14): import '../helper.js'; 2`] = `

Message:
> 1 | import '../helper.js';
    | ^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(15): import(\`./example.test.js\`); 1`] = `

  1 | import(\`./example.test.js\`);

`;

exports[`no-import-test-files > invalid(15): import(\`./example.test.js\`); 2`] = `

Message:
> 1 | import(\`./example.test.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(16): import(\`./example_test.js\`); 1`] = `

  1 | import(\`./example_test.js\`);

`;

exports[`no-import-test-files > invalid(16): import(\`./example_test.js\`); 2`] = `

Message:
> 1 | import(\`./example_test.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(17): import(\`./example-test.js\`); 1`] = `

  1 | import(\`./example-test.js\`);

`;

exports[`no-import-test-files > invalid(17): import(\`./example-test.js\`); 2`] = `

Message:
> 1 | import(\`./example-test.js\`);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(18): export {value} from './example.test.js'; 1`] = `

  1 | export {value} from './example.test.js';

`;

exports[`no-import-test-files > invalid(18): export {value} from './example.test.js'; 2`] = `

Message:
> 1 | export {value} from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(19): export {} from './example.test.js'; 1`] = `

  1 | export {} from './example.test.js';

`;

exports[`no-import-test-files > invalid(19): export {} from './example.test.js'; 2`] = `

Message:
> 1 | export {} from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(2): import './test-example.cjs'; 1`] = `

  1 | import './test-example.cjs';

`;

exports[`no-import-test-files > invalid(2): import './test-example.cjs'; 2`] = `

Message:
> 1 | import './test-example.cjs';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(20): export * from './example.test.js'; 1`] = `

  1 | export * from './example.test.js';

`;

exports[`no-import-test-files > invalid(20): export * from './example.test.js'; 2`] = `

Message:
> 1 | export * from './example.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(21): import './example.test.jsx'; 1`] = `

  1 | import './example.test.jsx';

`;

exports[`no-import-test-files > invalid(21): import './example.test.jsx'; 2`] = `

Message:
> 1 | import './example.test.jsx';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(22): import './example.test.ts'; 1`] = `

  1 | import './example.test.ts';

`;

exports[`no-import-test-files > invalid(22): import './example.test.ts'; 2`] = `

Message:
> 1 | import './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(23): import './example.test.mts'; 1`] = `

  1 | import './example.test.mts';

`;

exports[`no-import-test-files > invalid(23): import './example.test.mts'; 2`] = `

Message:
> 1 | import './example.test.mts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(24): import './example.test.cts'; 1`] = `

  1 | import './example.test.cts';

`;

exports[`no-import-test-files > invalid(24): import './example.test.cts'; 2`] = `

Message:
> 1 | import './example.test.cts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(25): import './example.test.tsx'; 1`] = `

  1 | import './example.test.tsx';

`;

exports[`no-import-test-files > invalid(25): import './example.test.tsx'; 2`] = `

Message:
> 1 | import './example.test.tsx';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(26): import('./example.test.js' as string); 1`] = `

  1 | import('./example.test.js' as string);

`;

exports[`no-import-test-files > invalid(26): import('./example.test.js' as string); 2`] = `

Message:
> 1 | import('./example.test.js' as string);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(27): import {type Value, value} from './example.test.ts'; 1`] = `

  1 | import {type Value, value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(27): import {type Value, value} from './example.test.ts'; 2`] = `

Message:
> 1 | import {type Value, value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(28): import {type Value} from './example.test.ts'; 1`] = `

  1 | import {type Value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(28): import {type Value} from './example.test.ts'; 2`] = `

Message:
> 1 | import {type Value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(29): export {type Value, value} from './example.test.ts'; 1`] = `

  1 | export {type Value, value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(29): export {type Value, value} from './example.test.ts'; 2`] = `

Message:
> 1 | export {type Value, value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(3): import './example.test.mjs'; 1`] = `

  1 | import './example.test.mjs';

`;

exports[`no-import-test-files > invalid(3): import './example.test.mjs'; 2`] = `

Message:
> 1 | import './example.test.mjs';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(30): export {type Value} from './example.test.ts'; 1`] = `

  1 | export {type Value} from './example.test.ts';

`;

exports[`no-import-test-files > invalid(30): export {type Value} from './example.test.ts'; 2`] = `

Message:
> 1 | export {type Value} from './example.test.ts';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(31): import './EXAMPLE.TEST.JS'; 1`] = `

  1 | import './EXAMPLE.TEST.JS';

`;

exports[`no-import-test-files > invalid(31): import './EXAMPLE.TEST.JS'; 2`] = `

Message:
> 1 | import './EXAMPLE.TEST.JS';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(4): import './example_test.js'; 1`] = `

  1 | import './example_test.js';

`;

exports[`no-import-test-files > invalid(4): import './example_test.js'; 2`] = `

Message:
> 1 | import './example_test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(5): import './example-test.js'; 1`] = `

  1 | import './example-test.js';

`;

exports[`no-import-test-files > invalid(5): import './example-test.js'; 2`] = `

Message:
> 1 | import './example-test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(6): import './test/helpers.js'; 1`] = `

  1 | import './test/helpers.js';

`;

exports[`no-import-test-files > invalid(6): import './test/helpers.js'; 2`] = `

Message:
> 1 | import './test/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(7): import './test\\\\helpers.js'; 1`] = `

  1 | import './test\\\\helpers.js';

`;

exports[`no-import-test-files > invalid(7): import './test\\\\helpers.js'; 2`] = `

Message:
> 1 | import './test\\\\helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(8): import './example\\\\thing.test.js'; 1`] = `

  1 | import './example\\\\thing.test.js';

`;

exports[`no-import-test-files > invalid(8): import './example\\\\thing.test.js'; 2`] = `

Message:
> 1 | import './example\\\\thing.test.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;

exports[`no-import-test-files > invalid(9): import './%74est/helpers.js'; 1`] = `

  1 | import './%74est/helpers.js';

`;

exports[`no-import-test-files > invalid(9): import './%74est/helpers.js'; 2`] = `

Message:
> 1 | import './%74est/helpers.js';
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Do not import a test file. The Node.js test runner may execute it twice.

`;
